Added Tail painting function